--- a/Resources/Private/Templates/TypoScriptObjects/Piwik.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Piwik.html
@@ -4,15 +4,16 @@
 		<!-- Piwik -->
 		<script type="text/javascript">
 		    var _paq = _paq || [];
+		    _paq.push(["disableCookies"]);
 		    _paq.push(["trackPageView"]);
 		    _paq.push(["enableLinkTracking"]);
 		
 		    (function() {
 		        var u=(("https:" == document.location.protocol) ? "https" : "http") + "://{piwikHost}/";
-		        _paq.push(["setTrackerUrl", u+"piwik.php"]);
+		        _paq.push(["setTrackerUrl", u+"matomo.php"]);
 		        _paq.push(["setSiteId", "{piwikSite}"]);
 		        var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
-		        g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
+		        g.defer=true; g.async=true; g.src=u+"matomo.js"; s.parentNode.insertBefore(g,s);
 		    })();
 		</script>
 		<!-- End Piwik Code -->
